<resources>

    <!-- TODO: App name -->
    <string name="app_name">CS Tv</string>

    <!-- TODO: Toolbar titles -->
    <string name="title_matches">Matches</string>
    <string name="title_league">League</string>
    <string name="title_series">Series</string>

    <!-- TODO: App texts -->
    <string name="text_vs">VS</string>
    <string name="text_team_one">Team One</string>
    <string name="text_team_two">Team Two</string>
    <string name="text_player">Player</string>
    <string name="text_league">IEM Cologne 2022</string>
    <string name="text_serie">Open Qualifier Season 2022</string>
    <string name="text_date_time">Date/Time</string>
    <string name="text_player_one_nickname">Fallen</string>
    <string name="text_player_one_fullname">Grabriel Toledo</string>
    <string name="text_player_two_nickname">fnx</string>
    <string name="text_player_two_fullname">Lincoln Lau</string>
    <string name="text_dark_mode">Dark mode?</string>

    <!-- TODO: App messages -->
    <string name="msg_general_error">Ops! An error occurred, try again</string>
    <string name="msg_timeout_error">Could not connect to server</string>
    <string name="msg_connection_error">You are not connected to the internet</string>
    <string name="msg_successfully_scheduled">Successfully scheduled</string>
    <string name="msg_already_scheduled">Already scheduled</string>

    <!-- TODO: Menu titles -->
    <string name="title_daynight">DayNight</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_notify">Notification</string>

    <!-- TODO: Extra keys -->
    <string name="match_key">MATCH_EXTRA</string>

    <!-- TODO: Preferences keys -->
    <string name="theme_key">dark_mode</string>

    <!-- TODO: WorkerManager keys -->
    <string name="worker_tag_key">WORKER_TAG</string>
    <string name="teams_name_key">TEAMS_NAME</string>
    <string name="league_name_key">LEAGUE_NAME</string>

    <!-- TODO: Notifications -->
    <string name="channel_id">me.brunofelix.cstvapp</string>
    <string name="channel_name">CS Tv</string>
    <string name="channel_description">Notifies the schedule of a match.</string>

    <!-- TODO: Accessibility -->
    <string name="acc_img_team_one">Image team one</string>
    <string name="acc_img_team_two">Image team two</string>
    <string name="acc_img_league">Image league logo</string>
    <string name="acc_img_player">Image player</string>
    <string name="acc_img_error">Image error</string>

</resources>