<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:theme="@style/ThemeThemeCSTvApp"
    tools:context=".ui.matchdetails.MatchDetailsActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowActionBar"
        app:elevation="0dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Body1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_league"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_league"
                    android:textStyle="bold"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_serie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_serie"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_match"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <TextView
            android:id="@+id/text_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_team_one"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/acc_img_team_one"
            app:layout_constraintBottom_toBottomOf="@+id/text_vs"
            app:layout_constraintEnd_toStartOf="@+id/text_vs"
            app:layout_constraintTop_toTopOf="@+id/text_vs"
            app:srcCompat="@mipmap/logo_empty_team"
            tools:srcCompat="@mipmap/logo_team_one"/>

        <TextView
            android:id="@+id/text_team_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_team_one"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/img_team_one"
            app:layout_constraintStart_toStartOf="@+id/img_team_one"
            app:layout_constraintTop_toBottomOf="@+id/img_team_one"
            tools:text="Imperial e-Sports" />

        <ImageView
            android:id="@+id/img_team_two"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/acc_img_team_two"
            app:layout_constraintBottom_toBottomOf="@+id/text_vs"
            app:layout_constraintStart_toEndOf="@+id/text_vs"
            app:layout_constraintTop_toTopOf="@+id/text_vs"
            app:srcCompat="@mipmap/logo_empty_team"
            tools:srcCompat="@mipmap/logo_team_two" />

        <TextView
            android:id="@+id/text_team_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_team_two"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/img_team_two"
            app:layout_constraintStart_toStartOf="@+id/img_team_two"
            app:layout_constraintTop_toBottomOf="@+id/img_team_two"
            tools:text="Furia e-Sports" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_date_time"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_match"
        tools:text="Hoje, 21:00" />

</androidx.constraintlayout.widget.ConstraintLayout>